--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="assects/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <header class="hero">
     <div class="image">
-        <img src="hero.jpg" alt="hero" width="200px">
+        <img src="assects/image/hero.jpg" alt="hero" width="200px">
     </div>
     <div class="textwrapper">
         <h5>Hello There!</h5>
@@ -43,7 +43,7 @@
     	<h1>About me</h1> 
         <div class="flexbox">
             <div class="photo1">
-                <img src="luis.jpg" alt="photo1" width="200px">
+                <img src="asects/image/luis.jpg" alt="photo1" width="200px">
             </div>
             <div class="textwrapper2">
                 <h3>Luis</h3>
