--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     	<h1>About me</h1> 
         <div class="flexbox">
             <div class="photo1">
-                <img src="asects/image/luis.jpg" alt="photo1" width="200px">
+                <img src="assects/image/luis.jpg" alt="photo1" width="200px">
             </div>
             <div class="textwrapper2">
                 <h3>Luis</h3>
