--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
          <div class="form">
             <input type="textarea" name="name" placeholder="Full Name">
             <input type="textarea" name="email" placeholder="Email"> <br>
-            <textarea class="box" rows="10" cols="57" placeholder="message.."></textarea> <br>
+            <input type="textarea" name="message" id="message" placeholder="Message Me">
+             <br>
             <a href="#"><button>Send</button></a>
         </div>
     </div>
