--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-	<title> Luis Anborn </title>
+	<title>Final Project</title>
 </head>
 <body>
-    <header class="hero" id="hero">
+     <header class="hero">
     <div class="image">
         <img src="assects/image/hero.jpg" alt="hero" width="200px">
     </div>
@@ -24,7 +24,6 @@
         </p>
         </div> 
         <div class="icons">
-            <!-- Corrected SVGs with proper closing tags -->
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-meta" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M8.217 5.243C9.145 3.988 10.171 3 11.483 3 13.96 3 16 6.153 16.001 9.907c0 2.29-.986 3.725-2.757 3.725-1.543 0-2.395-.866-3.924-3.424l-.667-1.123-.118-.197a55 55 0 0 0-.53-.877l-1.178 2.08c-1.673 2.925-2.615 3.541-3.923 3.541C1.086 13.632 0 12.217 0 9.973 0 6.388 1.995 3 4.598 3q.477-.001.924.122c.31.086.611.22.913.407.577.359 1.154.915 1.782 1.714m1.516 2.224q-.378-.614-.727-1.133L9 6.326c.845-1.305 1.543-1.954 2.372-1.954 1.723 0 3.102 2.537 3.102 5.653 0 1.188-.39 1.877-1.195 1.877-.773 0-1.142-.51-2.61-2.87zM4.846 4.756c.725.1 1.385.634 2.34 2.001A212 212 0 0 0 5.551 9.3c-1.357 2.126-1.826 2.603-2.581 2.603-.777 0-1.24-.682-1.24-1.9 0-2.602 1.298-5.264 2.846-5.264q.136 0 .27.018Z"/>
             </svg>
@@ -38,7 +37,7 @@
             </svg>
         </div>
     </div>
-</header>
+</header> 
 <section class="about">
     	<h1>About me</h1> 
         <div class="flexbox">
@@ -55,7 +54,7 @@
             </div>
         </div>
     </section>
-    <section class="skillsection">
+ <section class="skillsection">
         <h3>My Skills</h3>
         <div class="skills" >
             <div class="skillimg">
@@ -89,7 +88,7 @@
             </div>
         </div>
     </section>
-    <section class="projects">
+        <section class="projects">
     	<h1>My Projects</h1>
         <div class="flexbox2">
             <div class="column">
@@ -117,7 +116,7 @@
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
             </div>
         </div>
-    <section class="contact">
+     <section class="contact">
         
         	<h1>Contact Me</h1>
     <div class="flexbox3">
@@ -168,7 +167,7 @@
         </div>
     </footer>
     <div class="arrow">
-        <a href="#hero">
+        <a href="#">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16" width="200px" height="20px">
   <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
 </svg></a>
